--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <tittle>Welcome to Travel World</tittle>
+    <title>Welcome to Travel World</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>    
@@ -11,11 +11,13 @@
     <a href="aboutus.html">About us</a>
 
     
+    
     <h1> Welcome to Travel World </h1>       
 
-    <h2>About us</h2>
+    <h1>Home</h1>
+    <h1>About us</h1> 
  
-    <p class="redBackground">
+    <p class="purpleBackground">
         For over 30 years we have been bringing together the world’s most
         fascinating destinations, finest hotels and imaginative
         itineraries. With first-hand knowledge of the destinations
