--- a/aboutus.html
+++ b/aboutus.html
@@ -9,10 +9,11 @@
 </head>
 <body>      
     <a href="index.html">Home</a>
-<a href="Aboutus.html">About us</a>
+<a href="aboutus.html">About us</a>
 
+<h1> Welcome to Travel World </h1> 
              
-    <h1>About us</h1>       
+    <h1>about us</h1>       
 
 <p>  <p class="redBackground"> 
 When we started in 2003, we set out to do things differently.
