--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 </head>
 <body>      
     <a href="index.html">Home</a>
-<a href="aboutus.html">About us</a>
+<a href="aboutus.html">about us</a>
 
 <h1> Welcome to Travel World </h1> 
              
