--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>    
 
 <a href="index.html">Home</a>
-<a href="Aboutus.html">About us</a>
+<a href="aboutus.html">About us</a>
 
 <h1> Welcome to Travel World </h1>       
 
